--- a/.env
+++ b/.env
@@ -2,7 +2,8 @@
 DATABASE_URL=postgresql://neondb_owner:npg_pRMAY3O4BKjb@ep-ancient-morning-a1nwpqag-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 
 # Server Configuration
-PORT=3000
+PORT=8000
 
 # Development Environment
-NODE_ENV=development
+NODE_ENV=developmentPORT=3001
+PORT=3001
