--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "sync:static": "mkdir -p client/public/data && cp server/data/*.json client/public/data/",
-    "sync:db": "tsx server/scripts/sync-data.ts",
+    "sync:static": "mkdir -p client/public/data && cp server/data/cache/*.json client/public/data/",
+    "sync:db": "tsx server/scripts/sync-db-data.ts",
+    "sync:cache": "tsx server/scripts/sync-cache-data.js",
     "deploy": "tsx scripts/build-deploy.ts"
   },
   "dependencies": {
