--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev:server": "NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "build:client": "npm run sync:static && vite build",
+    "vercel-build": "npm run sync:static && vite build",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
