--- a/.env
+++ b/.env
@@ -1,10 +1,4 @@
 # Database Configuration
-DATABASE_URL=postgresql://neondb_owner:npg_pRMAY3O4BKjb@ep-ancient-morning-a1nwpqag-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
-
+DATABASE_URL=
 # Server Configuration
 PORT=8000
-
-# Development Environment
-NODE_ENV=developmentPORT=3001
-PORT=3001
-VITE_API_MODE=static
