--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # Database Configuration
-DATABASE_URL=
+DATABASE_URL=postgresql://neondb_owner:npg_pRMAY3O4BKjb@ep-ancient-morning-a1nwpqag-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+
 # Server Configuration
 PORT=8000
