--- a/client/public/data/projects.json
+++ b/client/public/data/projects.json
@@ -2,7 +2,10 @@
   {
     "id": 1,
     "title": "Personal Portfolio Website",
-    "description": "A modern, responsive portfolio website built with React, TypeScript, and Tailwind CSS. Features a clean design, dark mode toggle, and optimized performance.",
+    "description": [
+      "A modern, responsive portfolio website built with <strong>React</strong>, <strong>TypeScript</strong>, and <strong>Tailwind CSS</strong>",
+      "Features a clean design with <em>dark mode toggle</em> and optimized performance"
+    ],
     "image": "https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?w=600&h=400&fit=crop",
     "images": [],
     "technologies": [
@@ -24,7 +27,10 @@
   {
     "id": 2,
     "title": "E-commerce Backend API",
-    "description": "RESTful API for an e-commerce platform with user authentication, product management, order processing, and payment integration.",
+    "description": [
+      "RESTful API for an e-commerce platform with <strong>user authentication</strong> and authorization",
+      "Comprehensive <strong>product management</strong> system with inventory tracking"
+    ],
     "image": "https://images.unsplash.com/photo-1563013544-824ae1b704d3?w=600&h=400&fit=crop",
     "images": [],
     "technologies": [
@@ -34,7 +40,7 @@
       "JWT",
       "Stripe API"
     ],
-    "liveUrl": null,
+    "liveUrl": "https://github.com/yourusername/ecommerce-api",
     "githubUrl": "https://github.com/yourusername/ecommerce-api",
     "featured": true,
     "status": "completed",
@@ -46,7 +52,10 @@
   {
     "id": 3,
     "title": "Task Management App",
-    "description": "A collaborative task management application with real-time updates, file attachments, and team collaboration features.",
+    "description": [
+      "A collaborative task management application with <strong>real-time updates</strong> using <code>Socket.io</code>",
+      "Advanced <strong>file attachment</strong> system with cloud storage integration"
+    ],
     "image": "https://images.unsplash.com/photo-1611224923853-80b023f02d71?w=600&h=400&fit=crop",
     "images": [],
     "technologies": [
@@ -56,9 +65,9 @@
       "Express",
       "Material-UI"
     ],
-    "liveUrl": "https://taskapp.com",
+    "liveUrl": null,
     "githubUrl": "https://github.com/yourusername/task-app",
-    "featured": false,
+    "featured": true,
     "status": "completed",
     "challenges": [],
     "learnings": [],
