--- a/server/data/db/projects.json
+++ b/server/data/db/projects.json
@@ -2,37 +2,58 @@
   {
     "id": 1,
     "title": "Personal Portfolio Website",
-    "description": "A modern, responsive portfolio website built with React, TypeScript, and Tailwind CSS. Features a clean design, dark mode toggle, and optimized performance.",
+    "description": [
+      "A modern, responsive portfolio website built with <strong>React</strong>, <strong>TypeScript</strong>, and <strong>Tailwind CSS</strong>",
+      "Features a clean design with <em>dark mode toggle</em> and optimized performance"
+    ],
     "image": "https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?w=600&h=400&fit=crop",
+    "images": [],
     "technologies": ["React", "TypeScript", "Tailwind CSS", "Node.js", "Express"],
     "liveUrl": "https://yourportfolio.com",
     "githubUrl": "https://github.com/yourusername/portfolio",
     "featured": true,
+    "status": "completed",
+    "challenges": [],
+    "learnings": [],
     "order": 1,
-    "status": "completed"
+    "is_deleted": false
   },
   {
     "id": 2,
     "title": "E-commerce Backend API",
-    "description": "RESTful API for an e-commerce platform with user authentication, product management, order processing, and payment integration.",
+    "description": [
+      "RESTful API for an e-commerce platform with <strong>user authentication</strong> and authorization",
+      "Comprehensive <strong>product management</strong> system with inventory tracking"
+    ],
     "image": "https://images.unsplash.com/photo-1563013544-824ae1b704d3?w=600&h=400&fit=crop",
+    "images": [],
     "technologies": ["Node.js", "Express", "PostgreSQL", "JWT", "Stripe API"],
     "liveUrl": null,
     "githubUrl": "https://github.com/yourusername/ecommerce-api",
     "featured": true,
+    "status": "completed",
+    "challenges": [],
+    "learnings": [],
     "order": 2,
-    "status": "completed"
+    "is_deleted": false
   },
   {
     "id": 3,
     "title": "Task Management App",
-    "description": "A collaborative task management application with real-time updates, file attachments, and team collaboration features.",
+    "description": [
+      "A collaborative task management application with <strong>real-time updates</strong> using <code>Socket.io</code>",
+      "Advanced <strong>file attachment</strong> system with cloud storage integration"
+    ],
     "image": "https://images.unsplash.com/photo-1611224923853-80b023f02d71?w=600&h=400&fit=crop",
+    "images": [],
     "technologies": ["React", "Socket.io", "MongoDB", "Express", "Material-UI"],
     "liveUrl": "https://taskapp.com",
     "githubUrl": "https://github.com/yourusername/task-app",
-    "featured": false,
+    "featured": true,
+    "status": "completed",
+    "challenges": [],
+    "learnings": [],
     "order": 3,
-    "status": "completed"
+    "is_deleted": false
   }
 ] 
